[tool.poetry]
name = "pyalchemy"
version = "0.1.0"
description = "SQLAlchemy + Pydantic FTW"
authors = ["Chris Lawlor <lawlor.chris@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"
pydantic = "^0.32.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
mypy = "^0.730.0"
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
